Fix extra gap between col-1 and col-2 in tablet view: zero img margin-bottom

--- a/style.css
+++ b/style.css
@@ -382,6 +382,10 @@ footer {
         grid-row: 1;
     }
 
+    .col-1 img {
+        margin-bottom: 0;
+    }
+
     .col-2 {
         grid-column: 1;
         grid-row: 2;
